--- a/composer.json
+++ b/composer.json
@@ -5,10 +5,11 @@
     "license": "MIT",
     "type": "project",
     "require": {
-        "php": "^7.2.5",
-        "laravel/lumen-framework": "^7.0"
+        "php": "^8.1",
+        "laravel/lumen-framework": "^8.0"
     },
     "require-dev": {
+        "flipbox/lumen-generator": "^9.2",
         "fzaninotto/faker": "^1.9.1",
         "mockery/mockery": "^1.3.1",
         "phpunit/phpunit": "^8.5"
