--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
     "type": "project",
     "require": {
         "php": "^8.1",
+        "illuminate/mail": "^8.83",
         "laravel/lumen-framework": "^8.0"
     },
     "require-dev": {
